docs: 最終更新日を追加

--- a/docs/privacy.mdx
+++ b/docs/privacy.mdx
@@ -3,6 +3,8 @@ title: プライバシーポリシー
 sidebar_position: 3
 ---
 
+**最終更新日：2024年02月23日**
+
 当サービスでは、以下の情報を収集しています。
 なお、サービスによっては本プライバシーポリシーの内容に加え、個別に収集する内容が加わる場合があります。その場合は、該当サービスのドキュメントページに収集する情報を記載しておりますのでご確認ください。
 
