--- a/docs/tos.mdx
+++ b/docs/tos.mdx
@@ -3,6 +3,8 @@ title: 利用規約
 sidebar_position: 2
 ---
 
+**最終更新日：2024年02月16日**
+
 この利用規約（以下、「本規約」といいます。）は、<Mention>[@conarin](https://redirect.conarin.com/discord)</Mention>（以下、「サービス提供者」といいます。）が開発および運用しているWebサイトやコミュニケーションプラットフォーム「Discord」で提供するBotアプリケーションなどのサービス（以下、「当サービス」といいます。）の利用条件を定めるものです。利用者の皆さまには、本規約に従って当サービスをご利用いただきます。
 
 ## 第1条 適用
