chore: リンクを相対ファイルパスに変更

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -5,6 +5,6 @@ sidebar_position: 1
 
 本サイトは<Mention>[@conarin](https://redirect.conarin.com/discord)</Mention>が開発・運用しているWebサイトやDiscord Botなど（以下、「当サービス」といいます。）のドキュメントサイトです。
 
-当サービスをご利用いただく際は、[利用規約](/tos)や[プライバシーポリシー](/privacy)をよくお読みくださいますようお願い申し上げます。
+当サービスをご利用いただく際は、[利用規約](./tos.mdx)や[プライバシーポリシー](./privacy.mdx)をよくお読みくださいますようお願い申し上げます。
 
 ご不明な点などがございましたら、お気軽に<Mention>[@conarin](https://redirect.conarin.com/discord)</Mention>へお問い合わせください。
