--- a/docs/privacy.mdx
+++ b/docs/privacy.mdx
@@ -8,7 +8,7 @@ sidebar_position: 3
 当サービスでは、以下の情報を収集しています。
 なお、サービスによっては本プライバシーポリシーの内容に加え、個別に収集する内容が加わる場合があります。その場合は、該当サービスのドキュメントページに収集する情報を記載しておりますのでご確認ください。
 
-また、本プライバシーポリシーでの「当サービス」や「サービス提供者」などの言葉は[利用規約](/tos)で定義されているものと同じものを指します。
+また、本プライバシーポリシーでの「当サービス」や「サービス提供者」などの言葉は[利用規約](./tos.mdx)で定義されているものと同じものを指します。
 
 ## 当サービスが収集する情報
 ### Webサイト
@@ -65,4 +65,4 @@ sidebar_position: 3
 サービス提供者が別途定める場合を除いて、変更後のプライバシーポリシーは、本プライバシーポリシーのページに掲載した時から効力を生じるものとします。
 
 ## お問い合わせ
-本プライバシーポリシーに関するお問い合わせは、[お問い合わせページ](/contact)からお問い合わせください。
+本プライバシーポリシーに関するお問い合わせは、[お問い合わせページ](./contact.mdx)からお問い合わせください。
