--- a/docs/tos.mdx
+++ b/docs/tos.mdx
@@ -55,7 +55,7 @@ sidebar_position: 2
 2. サービス提供者は利用者に対し、前項による本規約の変更にあたり、事前に、本規約を変更する旨および変更後の本規約の内容並びにその効力発生時期を通知します。
 
 ## 第8条 個人情報の取り扱い
-サービス提供者は、当サービスの利用によって取得する個人情報は、「[プライバシーポリシー](/privacy)」に従い適切に取り扱うものとします。
+サービス提供者は、当サービスの利用によって取得する個人情報は、「[プライバシーポリシー](./privacy.mdx)」に従い適切に取り扱うものとします。
 
 ## 第9条 通知または連絡
 利用者とサービス提供者との間の通知または連絡は、サービス提供者の定める方法によって行うものとします。
