chore: 絵文字を絵文字名に変更

--- a/docs/discord/timer/commands/cancel.mdx
+++ b/docs/discord/timer/commands/cancel.mdx
@@ -3,9 +3,9 @@
 セットしたタイマーをキャンセルします。また、半角スペースで区切ることで複数同時にキャンセルできます。  
 コマンド名は`remove`、`rm`、`delete`、`del`でも可能です。
 
-| パラメータ名 | 概要                                 | 必須 |
-|--------|------------------------------------|----|
-| タイマーID | 削除したいタイマーのIDを入力します。IDはセット時に表示されます。 | ⭕  |
+| パラメータ名 | 概要                                 | 必須  |
+|--------|------------------------------------|-----|
+| タイマーID | 削除したいタイマーのIDを入力します。IDはセット時に表示されます。 | :o: |
 
 ## 例
 - <Mention>@JSTimerBot</Mention> cancel 64
