--- a/docs/discord/timer/commands/repeat.mdx
+++ b/docs/discord/timer/commands/repeat.mdx
@@ -3,12 +3,12 @@
 特定の曜日や日にちに通知するタイマーをセットします。  
 コマンド名は`cron`、`schedule`、`interval`でも可能です。
 
-| パラメータ名 | 概要                                                                                         | 必須 |
-|--------|--------------------------------------------------------------------------------------------|----|
-| 曜日     | 通知する曜日または日にちを入力します。<br/>詳しくは[日にち/曜日の指定方法](#日にち曜日の指定方法)をご確認ください。                            | ⭕  |
-| 日時     | 通知する時刻を入力します。<br/>詳しくは[時刻の指定方法](#時刻の指定方法)をご確認ください。                                         | ⭕  |
-| メッセージ  | 通知時に表示させるメッセージを指定できます。255文字まで入力できます。<br/>メンションの扱いについては[メンションについて](../mention.mdx)をご確認ください。 |    |
-| チャンネル  | 通知するチャンネルを指定できます。<br/>指定方法については[チャンネルの指定方法について](../channel.mdx)をご確認ください。                   |    |
+| パラメータ名 | 概要                                                                                         | 必須  |
+|--------|--------------------------------------------------------------------------------------------|-----|
+| 曜日     | 通知する曜日または日にちを入力します。<br/>詳しくは[日にち/曜日の指定方法](#日にち曜日の指定方法)をご確認ください。                            | :o: |
+| 日時     | 通知する時刻を入力します。<br/>詳しくは[時刻の指定方法](#時刻の指定方法)をご確認ください。                                         | :o: |
+| メッセージ  | 通知時に表示させるメッセージを指定できます。255文字まで入力できます。<br/>メンションの扱いについては[メンションについて](../mention.mdx)をご確認ください。 |     |
+| チャンネル  | 通知するチャンネルを指定できます。<br/>指定方法については[チャンネルの指定方法について](../channel.mdx)をご確認ください。                   |     |
 
 ## 例
 - <Mention>@JSTimerBot</Mention> repeat 日曜日 18:30 サザエ #通知チャンネル
