--- a/docs/discord/timer/commands/test.mdx
+++ b/docs/discord/timer/commands/test.mdx
@@ -3,11 +3,11 @@
 [setコマンド](./set.mdx)の動作を確認できます。  
 タイマーがセットされない点以外は[setコマンド](./set.mdx)と同様です。
 
-| パラメータ名 | 概要                                                                                         | 必須 |
-|--------|--------------------------------------------------------------------------------------------|----|
-| 日時     | 通知する日時を入力します。<br/>詳しくは[日時の指定方法](./set.mdx#日時の指定方法)をご確認ください。                                | ⭕  |
-| メッセージ  | 通知時に表示させるメッセージを指定できます。255文字まで入力できます。<br/>メンションの扱いについては[メンションについて](../mention.mdx)をご確認ください。 |    |
-| チャンネル  | 通知するチャンネルを指定できます。<br/>指定方法については[チャンネルの指定方法について](../channel.mdx)をご確認ください。                   |    |
+| パラメータ名 | 概要                                                                                         | 必須  |
+|--------|--------------------------------------------------------------------------------------------|-----|
+| 日時     | 通知する日時を入力します。<br/>詳しくは[日時の指定方法](./set.mdx#日時の指定方法)をご確認ください。                                | :o: |
+| メッセージ  | 通知時に表示させるメッセージを指定できます。255文字まで入力できます。<br/>メンションの扱いについては[メンションについて](../mention.mdx)をご確認ください。 |     |
+| チャンネル  | 通知するチャンネルを指定できます。<br/>指定方法については[チャンネルの指定方法について](../channel.mdx)をご確認ください。                   |     |
 
 ## 例
 - <Mention>@JSTimerBot</Mention> set 12月25日の午後6時
