chore: コマンドの例をメッセージ風に変更

--- a/docs/discord/timer/commands/cancel.mdx
+++ b/docs/discord/timer/commands/cancel.mdx
@@ -1,4 +1,7 @@
-> <Mention>@JSTimerBot</Mention> cancel \<タイマーID ...>
+<DiscordMessages>
+    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> cancel \<タイマーID ...></DiscordMessage>
+</DiscordMessages>
+<br/>
 
 セットしたタイマーをキャンセルします。また、半角スペースで区切ることで複数同時にキャンセルできます。  
 コマンド名は`remove`、`rm`、`delete`、`del`でも可能です。
@@ -8,6 +11,8 @@
 | タイマーID | 削除したいタイマーのIDを入力します。IDはセット時に表示されます。 | :o: |
 
 ## 例
-- <Mention>@JSTimerBot</Mention> cancel 64
-- <Mention>@JSTimerBot</Mention> delete 128 256
-- <Mention>@JSTimerBot</Mention> rm 512 1024 2048
+<DiscordMessages compactMode>
+    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> cancel 64</DiscordMessage>
+    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> delete 128 256</DiscordMessage>
+    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> rm 512 1024 2048</DiscordMessage>
+</DiscordMessages>
