--- a/docs/discord/timer/commands/test.mdx
+++ b/docs/discord/timer/commands/test.mdx
@@ -1,4 +1,7 @@
-> <Mention>@JSTimerBot</Mention> test \<日時\> [メッセージ] [チャンネル]
+<DiscordMessages>
+    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> test \<日時\> [メッセージ] [チャンネル]</DiscordMessage>
+</DiscordMessages>
+<br/>
 
 [setコマンド](./set.mdx)の動作を確認できます。  
 タイマーがセットされない点以外は[setコマンド](./set.mdx)と同様です。
@@ -10,6 +13,8 @@
 | チャンネル  | 通知するチャンネルを指定できます。<br/>指定方法については[チャンネルの指定方法について](../channel.mdx)をご確認ください。                   |     |
 
 ## 例
-- <Mention>@JSTimerBot</Mention> set 12月25日の午後6時
-- <Mention>@JSTimerBot</Mention> set 1m30s 1分30秒経ちました #チャンネル名
-- <Mention>@JSTimerBot</Mention> set 2024 ことよろ <Mention>#channel</Mention>
+<DiscordMessages compactMode>
+    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> test 12月25日の午後6時</DiscordMessage>
+    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> test 1m30s 1分30秒経ちました チャンネル名</DiscordMessage>
+    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> test 2024 ことよろ <DiscordMention type="channel">チャンネル名</DiscordMention> </DiscordMessage>
+</DiscordMessages>
