chore: 不要なauthorを削除

--- a/docs/discord/timer/commands/cancel.mdx
+++ b/docs/discord/timer/commands/cancel.mdx
@@ -1,5 +1,5 @@
 <DiscordMessages>
-    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> cancel \<タイマーID ...></DiscordMessage>
+    <DiscordMessage><DiscordMention>JSTimerBot</DiscordMention> cancel \<タイマーID ...></DiscordMessage>
 </DiscordMessages>
 <br/>
 
@@ -12,7 +12,7 @@
 
 ## 例
 <DiscordMessages compactMode>
-    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> cancel 64</DiscordMessage>
-    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> delete 128 256</DiscordMessage>
-    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> rm 512 1024 2048</DiscordMessage>
+    <DiscordMessage><DiscordMention>JSTimerBot</DiscordMention> cancel 64</DiscordMessage>
+    <DiscordMessage><DiscordMention>JSTimerBot</DiscordMention> delete 128 256</DiscordMessage>
+    <DiscordMessage><DiscordMention>JSTimerBot</DiscordMention> rm 512 1024 2048</DiscordMessage>
 </DiscordMessages>
