--- a/docs/discord/timer/commands/repeat.mdx
+++ b/docs/discord/timer/commands/repeat.mdx
@@ -1,5 +1,5 @@
 <DiscordMessages>
-    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> repeat \<日にち|曜日> \<時刻> [メッセージ] [チャンネル]</DiscordMessage>
+    <DiscordMessage><DiscordMention>JSTimerBot</DiscordMention> repeat \<日にち|曜日> \<時刻> [メッセージ] [チャンネル]</DiscordMessage>
 </DiscordMessages>
 <br/>
 
@@ -15,9 +15,9 @@
 
 ## 例
 <DiscordMessages compactMode>
-    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> repeat 日曜日 18:30 サザエ #通知チャンネル</DiscordMessage>
-    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> cron 毎日 0時 日付が変わりました</DiscordMessage>
-    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> interval 25日 09:00 お賃金 <DiscordMention type="channel">チャンネル名</DiscordMention> </DiscordMessage>
+    <DiscordMessage><DiscordMention>JSTimerBot</DiscordMention> repeat 日曜日 18:30 サザエ #通知チャンネル</DiscordMessage>
+    <DiscordMessage><DiscordMention>JSTimerBot</DiscordMention> cron 毎日 0時 日付が変わりました</DiscordMessage>
+    <DiscordMessage><DiscordMention>JSTimerBot</DiscordMention> interval 25日 09:00 お賃金 <DiscordMention type="channel">チャンネル名</DiscordMention> </DiscordMessage>
 </DiscordMessages>
 
 ## 日にち/曜日の指定方法
