--- a/docs/discord/timer/commands/test.mdx
+++ b/docs/discord/timer/commands/test.mdx
@@ -1,5 +1,5 @@
 <DiscordMessages>
-    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> test \<日時\> [メッセージ] [チャンネル]</DiscordMessage>
+    <DiscordMessage><DiscordMention>JSTimerBot</DiscordMention> test \<日時\> [メッセージ] [チャンネル]</DiscordMessage>
 </DiscordMessages>
 <br/>
 
@@ -14,7 +14,7 @@
 
 ## 例
 <DiscordMessages compactMode>
-    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> test 12月25日の午後6時</DiscordMessage>
-    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> test 1m30s 1分30秒経ちました チャンネル名</DiscordMessage>
-    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> test 2024 ことよろ <DiscordMention type="channel">チャンネル名</DiscordMention> </DiscordMessage>
+    <DiscordMessage><DiscordMention>JSTimerBot</DiscordMention> test 12月25日の午後6時</DiscordMessage>
+    <DiscordMessage><DiscordMention>JSTimerBot</DiscordMention> test 1m30s 1分30秒経ちました チャンネル名</DiscordMessage>
+    <DiscordMessage><DiscordMention>JSTimerBot</DiscordMention> test 2024 ことよろ <DiscordMention type="channel">チャンネル名</DiscordMention> </DiscordMessage>
 </DiscordMessages>
