--- a/docs/discord/timer/commands/list.mdx
+++ b/docs/discord/timer/commands/list.mdx
@@ -1,5 +1,5 @@
 <DiscordMessages>
-    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> list [all] [link|url]</DiscordMessage>
+    <DiscordMessage><DiscordMention>JSTimerBot</DiscordMention> list [all] [link|url]</DiscordMessage>
 </DiscordMessages>
 <br/>
 
@@ -13,7 +13,7 @@
 
 ## 例
 <DiscordMessages compactMode>
-    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> list</DiscordMessage>
-    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> list url</DiscordMessage>
-    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> ls all link</DiscordMessage>
+    <DiscordMessage><DiscordMention>JSTimerBot</DiscordMention> list</DiscordMessage>
+    <DiscordMessage><DiscordMention>JSTimerBot</DiscordMention> list url</DiscordMessage>
+    <DiscordMessage><DiscordMention>JSTimerBot</DiscordMention> ls all link</DiscordMessage>
 </DiscordMessages>
