--- a/docs/discord/timer/commands/set.mdx
+++ b/docs/discord/timer/commands/set.mdx
@@ -1,5 +1,5 @@
 <DiscordMessages>
-    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> set \<日時\> [メッセージ] [チャンネル]</DiscordMessage>
+    <DiscordMessage><DiscordMention>JSTimerBot</DiscordMention> set \<日時\> [メッセージ] [チャンネル]</DiscordMessage>
 </DiscordMessages>
 <br/>
 
@@ -13,9 +13,9 @@
 
 ## 例
 <DiscordMessages compactMode>
-    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> set 12月25日の午後6時</DiscordMessage>
-    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> set 1m30s 1分30秒経ちました チャンネル名</DiscordMessage>
-    <DiscordMessage author="user"><DiscordMention>JSTimerBot</DiscordMention> set 2024 ことよろ <DiscordMention type="channel">チャンネル名</DiscordMention> </DiscordMessage>
+    <DiscordMessage><DiscordMention>JSTimerBot</DiscordMention> set 12月25日の午後6時</DiscordMessage>
+    <DiscordMessage><DiscordMention>JSTimerBot</DiscordMention> set 1m30s 1分30秒経ちました チャンネル名</DiscordMessage>
+    <DiscordMessage><DiscordMention>JSTimerBot</DiscordMention> set 2024 ことよろ <DiscordMention type="channel">チャンネル名</DiscordMention> </DiscordMessage>
 </DiscordMessages>
 
 ## 日時の指定方法
