docs: 表記ゆれを修正

--- a/docs/discord/timer/commands/set.mdx
+++ b/docs/discord/timer/commands/set.mdx
@@ -72,7 +72,7 @@
 :::tip
 
 - 相対日時(`明日`や`10分後`など)で指定すると秒単位で同じ時刻に設定されます。
-- 週の始まりは日曜日と定義しています。そのため、例えば1日(月)に「来週の日曜日」と入力すると7日(日)に通知されます。
+- 週の始まりは日曜日と定義しています。そのため、例えば1日(月)に`来週の日曜日`と入力すると7日(日)に通知されます。
 - testコマンドを利用することで、日時やメッセージがどのように設定されるか確認することができます。
 - セット完了メッセージのキャンセルボタンを押すと、タイマーはキャンセルされます。
 
