--- a/docs/discord/timer/commands/cancel.mdx
+++ b/docs/discord/timer/commands/cancel.mdx
@@ -1,3 +1,7 @@
+---
+description: セットしたタイマーをキャンセルします。
+---
+
 <DiscordMessages>
     <DiscordMessage><DiscordMention>JSTimerBot</DiscordMention> cancel \<タイマーID ...></DiscordMessage>
 </DiscordMessages>
