--- a/docs/discord/timer/commands/list.mdx
+++ b/docs/discord/timer/commands/list.mdx
@@ -1,3 +1,7 @@
+---
+description: セットしているタイマーの一覧を表示します。
+---
+
 <DiscordMessages>
     <DiscordMessage><DiscordMention>JSTimerBot</DiscordMention> list [all] [link|url]</DiscordMessage>
 </DiscordMessages>
