--- a/docs/discord/timer/commands/repeat.mdx
+++ b/docs/discord/timer/commands/repeat.mdx
@@ -1,3 +1,7 @@
+---
+description: 特定の曜日や日にちに通知するタイマーをセットします。
+---
+
 <DiscordMessages>
     <DiscordMessage><DiscordMention>JSTimerBot</DiscordMention> repeat \<日にち|曜日> \<時刻> [メッセージ] [チャンネル]</DiscordMessage>
 </DiscordMessages>
