--- a/docs/discord/timer/commands/set.mdx
+++ b/docs/discord/timer/commands/set.mdx
@@ -1,3 +1,7 @@
+---
+description: 特定の日時に通知するタイマーをセットします。
+---
+
 <DiscordMessages>
     <DiscordMessage><DiscordMention>JSTimerBot</DiscordMention> set \<日時\> [メッセージ] [チャンネル]</DiscordMessage>
 </DiscordMessages>
