--- a/docs/discord/timer/commands/test.mdx
+++ b/docs/discord/timer/commands/test.mdx
@@ -1,3 +1,7 @@
+---
+description: setコマンドの動作を確認できます。
+---
+
 <DiscordMessages>
     <DiscordMessage><DiscordMention>JSTimerBot</DiscordMention> test \<日時\> [メッセージ] [チャンネル]</DiscordMessage>
 </DiscordMessages>
