--- a/docs/tos.mdx
+++ b/docs/tos.mdx
@@ -2,9 +2,9 @@
 title: 利用規約
 ---
 
-**最終更新日：2024年02月16日**
+**最終更新日：2024年03月16日**
 
-この利用規約（以下、「本規約」といいます。）は、<Mention>[@conarin](https://redirect.conarin.com/discord)</Mention>（以下、「サービス提供者」といいます。）が開発および運用しているWebサイトやコミュニケーションプラットフォーム「Discord」で提供するBotアプリケーションなどのサービス（以下、「当サービス」といいます。）の利用条件を定めるものです。利用者の皆さまには、本規約に従って当サービスをご利用いただきます。
+この利用規約（以下、「本規約」といいます。）は、<Mention>[@conarin](https://redirect.conarin.com/discord)</Mention>（以下、「サービス提供者」といいます。）が提供するWebサイト、およびコミュニケーションプラットフォーム「Discord」で提供するBotアプリケーションなどのサービス（以下、「当サービス」といいます。）の利用条件を定めるものです。利用者の皆さまには、本規約に従って当サービスをご利用いただきます。
 
 ## 第1条 適用
 1. 本規約は、利用者とサービス提供者との間の当サービスの利用に関わる一切の関係に適用されるものとします。
