--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -2,7 +2,7 @@
 title: はじめに
 ---
 
-本サイトは<Mention>[@conarin](https://redirect.conarin.com/discord)</Mention>が開発・運用しているWebサイトやDiscord Botなど（以下、「当サービス」といいます。）のドキュメントサイトです。
+本サイトは<Mention>[@conarin](https://redirect.conarin.com/discord)</Mention>が提供するWebサイトやDiscord Botなど（以下、「当サービス」といいます。）のドキュメントサイトです。
 
 当サービスをご利用いただく際は、[利用規約](./tos.mdx)や[プライバシーポリシー](./privacy.mdx)をよくお読みくださいますようお願い申し上げます。
 
