--- a/docs/trademark.mdx
+++ b/docs/trademark.mdx
@@ -9,5 +9,7 @@ hide_table_of_contents: true
 - 「Discord」は Discord Inc. の商標または登録商標です。
 - 「Twitter」は X Corp. の商標または登録商標です。
 - 「Minecraft」は Mojang Synergies AB の商標または登録商標です。
+- 「Gyazo」は Helpfeel Inc. の商標または登録商標です。
+- 「Cloudflare」は Cloudflare, Inc. の商標または登録商標です。
 
 その他、当サービスに記載されている会社名、商品またはサービス名は、一般に各社の商標または登録商標です。
