docs: 日付の区切り文字をスラッシュからハイフンに変更

--- a/docs/discord/4tunes/changelog/v1.mdx
+++ b/docs/discord/4tunes/changelog/v1.mdx
@@ -1,76 +1,76 @@
 ---
 title: v1
-description: 2020/03/14~2022/01/17の間、discord.jsで開発していた4Tunes(v1)。
+description: 2020-03-14~2022-01-17の間、discord.jsで開発していた4Tunes(v1)。
 toc_max_heading_level: 2
 ---
 
-2020/03/14~2022/01/17の間、discord.jsで開発していた4Tunes(v1)。
+2020-03-14~2022-01-17の間、discord.jsで開発していた4Tunes(v1)。
 
 ---
 
-## 2023/03/07
+## 2023-03-07
 ### :memo:変更
 - 4Tunes(v1)をサービス終了し、4Tunes(v2)へ移行
 
 ---
 
-## 2020/08/05
+## 2020-08-05
 ### :memo:変更
 - ログインボーナスの経験値を絶対値に変更
 
 ---
 
-## 2020/05/12
+## 2020-05-12
 ### :rocket:新機能
 - 引用展開機能において、ptbやcanary、discordappやdisocordなどのホストでも展開するように
 
 ---
 
-## 2020/04/22
+## 2020-04-22
 ### :rocket:新機能
 - snowflakeコマンド(idを日時に変換するコマンド)を実装
 
 ---
 
-## 2020/04/18
+## 2020-04-18
 ### :memo:変更
 - ログインボーナスの連続受け取り日数を表示するように
 
 ---
 
-## 2020/04/14
+## 2020-04-14
 ### :memo:変更
 - JSTimerBotの単体化に伴い、4Tunesでのタイマーコマンドを削除
 - グローバルチャット機能を削除
 
 ---
 
-## 2020/03/20
+## 2020-03-20
 ### :rocket:新機能
 - 連続ログインボーナスを実装
 - colorコマンドを実装
 
 ---
 
-## 2020/03/15
+## 2020-03-15
 ### :bug:バグ修正
 - メッセージURLの直後に文字があった場合、引用展開機能が機能しない不具合を修正
 
 ---
 
-## 2020/03/14
+## 2020-03-14
 ### :rocket:新機能
 - 公式サイトを公開
 
 ---
 
-## 2020/02/29
+## 2020-02-29
 ### :memo:変更
 - ログインボーナスの受け取り可能時刻を「前回の受け取りから24時間後」から「日本標準時の0時以降」に変更
 
 ---
 
-## 2020/02/27
+## 2020-02-27
 ### :rocket:新機能
 - サービスの提供を開始
 
