docs: 不要な句点を削除

--- a/docs/api/index.mdx
+++ b/docs/api/index.mdx
@@ -12,11 +12,11 @@ title: はじめに
 
 ## エラーレスポンス
 
-| 名前            | 型      | 内容                 |
-|---------------|--------|--------------------|
-| error         | object | エラー情報が格納されたオブジェクト。 |
-| error.code    | number | HTTPステータスコード。      |
-| error.message | string | エラーメッセージ。          |
+| 名前            | 型      | 内容                |
+|---------------|--------|-------------------|
+| error         | object | エラー情報が格納されたオブジェクト |
+| error.code    | number | HTTPステータスコード      |
+| error.message | string | エラーメッセージ          |
 
 以下はエラーの例です。状況に応じて内容は変化します。
 
