docs: リンクを修正

--- a/docs/discord/index.mdx
+++ b/docs/discord/index.mdx
@@ -8,8 +8,8 @@ title: はじめに
 当サービスに関するお知らせはサポートサーバーで行います。当サービスをご利用の方はサポートサーバーへの参加をお勧めします。  
 ご質問やご要望などがございましたら[お問い合わせ](../contact.mdx)よりお問い合わせください。
 
-<Button to='https://redirect.conarin.com/discord/bot/support' style='secondary'>:question:サポートサーバーに入る</Button>
-<Button to='https://redirect.conarin.com/discord/bot/status' style='secondary'>ステータスを確認する</Button>
+<Button to='https://redirect.conarin.com/discord/bots/support' style='secondary'>:question:サポートサーバーに入る</Button>
+<Button to='https://redirect.conarin.com/discord/bots/status' style='secondary'>ステータスを確認する</Button>
 
 ## Bot一覧
 ### 公開中のBot
@@ -24,7 +24,7 @@ title: はじめに
 - ![](https://cdn.discordapp.com/avatars/759445670410584064/1277f8b40c2dd57a30cbbec0dc125f2f.webp?size=16) [voice](./voice/index.mdx)
 
 ## サポートサーバー
-[こちら](https://redirect.conarin.com/discord/bot/support)のDiscordサーバーでサポートを受けることができます。
+[こちら](https://redirect.conarin.com/discord/bots/support)のDiscordサーバーでサポートを受けることができます。
 
 ## ステータスページ
-[こちら](https://redirect.conarin.com/discord/bot/status)からBotの稼働状況を確認できます。
+[こちら](https://redirect.conarin.com/discord/bots/status)からBotの稼働状況を確認できます。
