--- a/docs/contact.mdx
+++ b/docs/contact.mdx
@@ -6,5 +6,5 @@ title: お問い合わせ
 - DiscordのDM (<Mention>[@conarin](https://redirect.conarin.com/discord)</Mention>)  
     ブラウザで開くとプロフィールが表示されます。アプリ版を利用されている場合はユーザー名で検索してください。
 - TwitterのDM ([@\_conarin\_](https://redirect.conarin.com/twitter))
-- Discord Botのサポートサーバー (https://redirect.conarin.com/discord/bot/support)
+- Discord Botのサポートサーバー (https://redirect.conarin.com/discord/bots/support)
 - お問い合わせフォーム (https://conarin.com/contact)
