--- a/docs/contact.mdx
+++ b/docs/contact.mdx
@@ -5,6 +5,6 @@ title: お問い合わせ
 当サービスに関するお問い合わせは、以下からお問い合わせください。
 - DiscordのDM (<Mention>[@conarin](https://redirect.conarin.com/discord)</Mention>)  
     ブラウザで開くとプロフィールが表示されます。アプリ版を利用されている場合はユーザー名で検索してください。
-- TwitterのDM ([@\_conarin\_](https://redirect.conarin.com/twitter))
+- Twitter(X)のDM ([@\_conarin\_](https://redirect.conarin.com/x))
 - Discord Botのサポートサーバー (https://redirect.conarin.com/discord/bots/support)
 - お問い合わせフォーム (https://conarin.com/contact)
