docs: 表記ゆれを修正

--- a/docs/discord/seichi/index.mdx
+++ b/docs/discord/seichi/index.mdx
@@ -10,7 +10,7 @@ pagination_next: discord/seichi/changelog
 
 <Button to='https://redirect.conarin.com/discord/bots/seichi/invite'>:robot:招待する</Button>
 <Button to='https://redirect.conarin.com/discord/bots/seichi/support' style='secondary'>:question:サポートサーバーに入る</Button>
-<Button to='../../api' style='secondary'>REST API</Button>
+<Button to='../../api' style='secondary'>API</Button>
 
 :::warning
 
