docs: seichiAPIの注意事項を追加

--- a/docs/api/seichi/ranking.mdx
+++ b/docs/api/seichi/ranking.mdx
@@ -2,6 +2,13 @@
 title: ランキング
 ---
 
+:::warning
+
+本APIは将来的に廃止(破壊的な仕様変更)を予定しています。  
+移行期間や廃止日が決定次第、[サポートサーバー](https://redirect.conarin.com/discord/bots/seichi/support)および[Twitterアカウント](https://redirect.conarin.com/discord/bots/seichi/x)にてお知らせいたします。
+
+:::
+
 各種ランキング(整地量・建築量・投票数・接続時間の総合・日間・週間・月間・年間ランキング)を取得できます。  
 使用例はこちら -> https://seichi.conarin.com/ranking
 
