--- a/docs/api/seichi/player-data.mdx
+++ b/docs/api/seichi/player-data.mdx
@@ -2,6 +2,13 @@
 title: プレイヤーデータの構造
 ---
 
+:::warning
+
+本APIは将来的に廃止(破壊的な仕様変更)を予定しています。  
+移行期間や廃止日が決定次第、[サポートサーバー](https://redirect.conarin.com/discord/bots/seichi/support)および[Twitterアカウント](https://redirect.conarin.com/discord/bots/seichi/x)にてお知らせいたします。
+
+:::
+
 [ランキングAPI](./ranking.mdx)および[プレイヤーランキングAPI](./player-ranking.mdx)で使用されるプレイヤーデータのデータ構造。
 
 | 名前                      | 型      | 内容                                                                                                               |
