docs: 注意事項の追加漏れ

--- a/docs/api/seichi/search.mdx
+++ b/docs/api/seichi/search.mdx
@@ -2,6 +2,13 @@
 title: ページ検索
 ---
 
+:::warning
+
+本APIは将来的に廃止(破壊的な仕様変更)を予定しています。  
+移行期間や廃止日が決定次第、[サポートサーバー](https://redirect.conarin.com/discord/bots/seichi/support)および[Twitterアカウント](https://redirect.conarin.com/discord/bots/seichi/x)にてお知らせいたします。
+
+:::
+
 ギガンティック☆整地鯖とうんちゃま氏に関連するページを検索できます。  
 追加したいページやキーワードなどがございましたら、お気軽にご連絡ください。  
 使用例はこちら -> https://seichi.conarin.com/search
