chore: トップページにカテゴリのリンクを追加

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -7,3 +7,6 @@ title: はじめに
 当サービスをご利用いただく際は、[利用規約](./tos.mdx)や[プライバシーポリシー](./privacy.mdx)をよくお読みくださいますようお願い申し上げます。
 
 ご不明な点などがございましたら、お気軽に<Mention>[@conarin](https://redirect.conarin.com/discord)</Mention>へお問い合わせください。
+
+<Button to='./discord' style='primary'>:robot: Discord Bot</Button>
+<Button to='./api' style='secondary'>:satellite: API</Button>
