docs: 末尾のスラッシュを削除

--- a/docs/api/index.mdx
+++ b/docs/api/index.mdx
@@ -4,11 +4,11 @@ title: はじめに
 
 ## 基本仕様
 
-| 名前      | 内容                       |
-|---------|--------------------------|
-| ベースURL  | https://api.conarin.com/ |
-| レートリミット | 60 req/min               |
-| レスポンス形式 | JSON                     |
+| 名前      | 内容                      |
+|---------|-------------------------|
+| ベースURL  | https://api.conarin.com |
+| レートリミット | 60 req/min              |
+| レスポンス形式 | JSON                    |
 
 ## エラーレスポンス
 
