docs: VRChatカテゴリへのリンクを追加

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -10,3 +10,4 @@ title: はじめに
 
 <Button to='./discord' style='primary'>:robot: Discord Bot</Button>
 <Button to='./api' style='secondary'>:satellite: API</Button>
+<Button to='./vrchat' style='secondary'>:speech_balloon: VRChat</Button>
