docs: ツイートの埋め込みを追加

--- a/docs/vrchat/v-suitch/index.mdx
+++ b/docs/vrchat/v-suitch/index.mdx
@@ -2,8 +2,15 @@
 title: v-suitch
 description: VRChatでExpression MenuからSwitchBotデバイスを操作するやつ。
 ---
+import {TwitterTweetEmbed} from "react-twitter-embed";
 
 <Button to='https://redirect.conarin.com/github/v-suitch' style='success'>リポジトリはこちら</Button>
+
+<TwitterTweetEmbed
+    tweetId={'1799399401728975317'}
+    options={{theme: 'dark', lang: 'ja'}}
+/>
+<br/>
 
 VRChatでExpression MenuからSwitchBotデバイスを操作するやつ。  
 V睡用にVRChat内から照明を点滅できたらいいなと思い作成。  
