docs: 言い回しを変更(アラビア数字->算用数字)

--- a/docs/discord/4tunes/commands/delete.mdx
+++ b/docs/discord/4tunes/commands/delete.mdx
@@ -17,7 +17,7 @@ description: メッセージを指定した数だけ削除します。
 
 | パラメータ名 | 概要                            | 必須  |
 |--------|-------------------------------|-----|
-| 削除件数   | 1以上100以下の整数値を半角のアラビア数字で入力します。 | :o: |
+| 削除件数   | 1以上100以下の整数値を半角の算用数字で入力します。 | :o: |
 
 ## 例
 <DiscordMessages compactMode>
