--- a/docs/discord/4tunes/commands/point.mdx
+++ b/docs/discord/4tunes/commands/point.mdx
@@ -19,7 +19,7 @@ description: メンバーのポイントを管理できます。
 |--------|-----------------------------------------------|-----|
 | サブコマンド | `add`、`sub`、`set`のいずれかを入力します。                 | :o: |
 | メンバー   | メンバーを入力します。                                   | :o: |
-| ポイント数  | `add`、`sub`は1以上、`set`は任意の整数値を半角のアラビア数字で入力します。 | :o: |
+| ポイント数  | `add`、`sub`は1以上、`set`は任意の整数値を半角の算用数字で入力します。 | :o: |
 
 ## 例
 <DiscordMessages compactMode>
