--- a/docs/discord/poker/index.mdx
+++ b/docs/discord/poker/index.mdx
@@ -21,7 +21,7 @@ pagination_next: discord/voice/index
 
 :::tip
 
-`!poker`の後に半角のスペースを入れ、1以上64以下の整数値を半角のアラビア数字で入力することで、参加料を設定することができます。
+`!poker`の後に半角のスペースを入れ、1以上64以下の整数値を半角の算用数字で入力することで、参加料を設定することができます。
 <DiscordMessages>
     <DiscordMessage>!poker 32</DiscordMessage>
 </DiscordMessages>
@@ -69,7 +69,7 @@ DMに送信できなかった場合(Botをブロックしている、DMの受け
 :::
 
 #### betとraiseの入力方法
-betとraiseは入力後、いくら賭けるかを問われます。半角のアラビア数字で整数値を入力します。
+betとraiseは入力後、いくら賭けるかを問われます。半角の算用数字で整数値を入力します。
 :::tip
 
 `bet 16`や`raise 32`のようにアクションの時点で半角のスペースで区切って入力することもできます。
