--- a/docs/discord/seichi/commands/ranking.mdx
+++ b/docs/discord/seichi/commands/ranking.mdx
@@ -12,8 +12,8 @@ description: ランキングの画像を表示します。
 
 | パラメータ名          | 概要                    | 入力形式                                                                               | 必須 | 初期値   |
 |-----------------|-----------------------|------------------------------------------------------------------------------------|----|-------|
-| rank<br/>offset | 開始順位を入力します。           | rank=半角のアラビア数字                                                                     |    | 1     |
-| limit<br/>lim   | 最大表示件数を1~30の範囲で入力します。 | limit=半角のアラビア数字                                                                    |    | 20    |
+| rank<br/>offset | 開始順位を入力します。           | rank=半角の算用数字                                                                     |    | 1     |
+| limit<br/>lim   | 最大表示件数を1~30の範囲で入力します。 | limit=半角の算用数字                                                                    |    | 20    |
 | type            | 種類を入力します。             | type=\<break\|build\|time\|vote><br/><br/>左から順番に整地量、建築量、接続時間、投票数です。                | 	  | break |
 | duration        | 期間を入力します。             | duration=\<total\|daily\|weekly\|monthly\|yearly><br/><br/>左から順番に総合、日間、週間、月間、年間です。 |    | daily |
 
