--- a/docs/discord/seichi/commands/player.mdx
+++ b/docs/discord/seichi/commands/player.mdx
@@ -3,18 +3,19 @@ description: プレイヤーのランキング画像を表示します。
 ---
 
 <DiscordMessages>
-    <DiscordMessage><DiscordMention>[非公式] 整地鯖Bot</DiscordMention> player \<mcid ...> [type=種類] [duration=期間]</DiscordMessage>
+    <DiscordMessage><DiscordMention>[非公式] 整地鯖Bot</DiscordMention> player \<mcid ...> [type=種類] [duration=期間] [date=日付]</DiscordMessage>
 </DiscordMessages>
 <br/>
 
 指定したプレイヤーのランキング画像を表示します。  
 コマンド名は`user`でも可能です。
 
-| パラメータ名   | 概要                                              | 入力形式                                                                               | 必須  | 初期値   |
-|----------|-------------------------------------------------|------------------------------------------------------------------------------------|-----|-------|
-| mcid     | プレイヤーのMCIDを入力します。スペースかコンマか改行で区切ることで30人まで指定できます。 | \[a-zA-Z0-9_]で2~16文字                                                               | :o: |       |
-| type     | 種類を入力します。                                       | type=\<break\|build\|time\|vote><br/><br/>左から順番に整地量、建築量、接続時間、投票数です。                | 	   | break |
-| duration | 期間を入力します。                                       | duration=\<total\|daily\|weekly\|monthly\|yearly><br/><br/>左から順番に総合、日間、週間、月間、年間です。 |     | daily |
+| パラメータ名   | 概要                                              | 入力形式                                                                               | 必須  | 初期値          |
+|----------|-------------------------------------------------|------------------------------------------------------------------------------------|-----|--------------|
+| mcid     | プレイヤーのMCIDを入力します。スペースかコンマか改行で区切ることで30人まで指定できます。 | \[a-zA-Z0-9_]で2~16文字                                                               | :o: |              |
+| type     | 種類を入力します。                                       | type=\<break\|build\|time\|vote><br/><br/>左から順番に整地量、建築量、接続時間、投票数です。                | 	   | break        |
+| duration | 期間を入力します。                                       | duration=\<total\|daily\|weekly\|monthly\|yearly><br/><br/>左から順番に総合、日間、週間、月間、年間です。 |     | daily        |
+| date     | 日付を入力します。                                       | date=YYYY-MM-DD                                                                    |     | 日本標準時での現在の日付 |
 
 :::info
 
