--- a/docs/discord/seichi/commands/ranking.mdx
+++ b/docs/discord/seichi/commands/ranking.mdx
@@ -3,19 +3,20 @@ description: ランキングの画像を表示します。
 ---
 
 <DiscordMessages>
-    <DiscordMessage><DiscordMention>[非公式] 整地鯖Bot</DiscordMention> ranking [rank=順位] [limit=件数] [type=種類] [duration=期間]</DiscordMessage>
+    <DiscordMessage><DiscordMention>[非公式] 整地鯖Bot</DiscordMention> ranking [rank=順位] [limit=件数] [type=種類] [duration=期間] [date=日付]</DiscordMessage>
 </DiscordMessages>
 <br/>
 
 ランキングの画像を表示します。  
 コマンド名は`rank`でも可能です。
 
-| パラメータ名          | 概要                    | 入力形式                                                                               | 必須 | 初期値   |
-|-----------------|-----------------------|------------------------------------------------------------------------------------|----|-------|
-| rank<br/>offset | 開始順位を入力します。           | rank=半角の算用数字                                                                     |    | 1     |
-| limit<br/>lim   | 最大表示件数を1~30の範囲で入力します。 | limit=半角の算用数字                                                                    |    | 20    |
-| type            | 種類を入力します。             | type=\<break\|build\|time\|vote><br/><br/>左から順番に整地量、建築量、接続時間、投票数です。                | 	  | break |
-| duration        | 期間を入力します。             | duration=\<total\|daily\|weekly\|monthly\|yearly><br/><br/>左から順番に総合、日間、週間、月間、年間です。 |    | daily |
+| パラメータ名          | 概要                    | 入力形式                                                                               | 必須 | 初期値          |
+|-----------------|-----------------------|------------------------------------------------------------------------------------|----|--------------|
+| rank<br/>offset | 開始順位を入力します。           | rank=半角の算用数字                                                                       |    | 1            |
+| limit<br/>lim   | 最大表示件数を1~30の範囲で入力します。 | limit=半角の算用数字                                                                      |    | 20           |
+| type            | 種類を入力します。             | type=\<break\|build\|time\|vote><br/><br/>左から順番に整地量、建築量、接続時間、投票数です。                | 	  | break        |
+| duration        | 期間を入力します。             | duration=\<total\|daily\|weekly\|monthly\|yearly><br/><br/>左から順番に総合、日間、週間、月間、年間です。 |    | daily        |
+| date            | 日付を入力します。             | date=YYYY-MM-DD                                                                    |    | 日本標準時での現在の日付 |
 
 ## 例
 <DiscordMessages>
