docs: Twitterの仕様変更のためTwitterのDMを削除

--- a/docs/contact.mdx
+++ b/docs/contact.mdx
@@ -4,7 +4,5 @@ title: お問い合わせ
 
 当サービスに関するお問い合わせは、以下からお問い合わせください。
 - DiscordのDM (<Mention>[@conarin](https://redirect.conarin.com/discord)</Mention>)  
-    ブラウザ版またはスマホ版で開くとプロフィールが表示されます。
-- Twitter(X)のDM ([@\_conarin\_](https://redirect.conarin.com/x))
-- Discord Botのサポートサーバー (https://redirect.conarin.com/discord/bots/support)
+- Discordのサポートサーバー (https://redirect.conarin.com/discord/bots/support)
 - お問い合わせフォーム (https://conarin.com/contact)
