--- a/docs/discord/seichi/changelog.mdx
+++ b/docs/discord/seichi/changelog.mdx
@@ -5,6 +5,13 @@ toc_max_heading_level: 2
 
 ---
 
+## 2025-01-25
+### :bug:バグ修正
+- 一部プレイヤーの最終ログイン日時が更新されない不具合を修正
+- 初回ログイン時に最終ログイン日時が更新されない不具合を修正
+
+---
+
 ## 2024-03-15
 ### :bug:バグ修正
 - 日間ランキングにおいて、本日と昨日の合計値が表示される不具合を修正
